# tgsecubot

./: .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
src/security_bot/: __init__.py  bot.py  moderation.py  storage.py
tests/: test_bot.py  test_moderation.py  test_storage.py
