[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-security-bot"
version = "0.1.0"
description = "Telegram group security bot"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot[job-queue]==21.11.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
telegram-security-bot = "security_bot.bot:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
